# backend-api

./: .air.toml  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  ask_dogy.py  biome.json  blobs.py  bunfig.toml  cliff.toml  cluster.ts  database.py  drizzle.config.ts  firebase-service-account.json  firebase_setup.py  go.mod  go.sum  helpers.py  main.py  notifications.py  package.json  parks.py  pyproject.toml  requirements-dev.txt  requirements.txt  search_parks.py  speech_to_text.py  sqlc.yml  startup.sh  tsconfig.json  watchdog_workers.py  workers.py
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main_dogybackendapi.yml  release.yml
api/: dogy.cfg.yml  dogy.gen.go  generate.go  openapi.yml
app/: config.py  errors.py  main.py
app/common/: pydantic.py
app/common/utils/: __init__.py  azure.py  key_vault.py
app/database/: core.py  datatypes.py  models.py  parks.py  utils.py
app/database/mixins/: timestamp.py
app/images/: crud.py
app/notifications/: devices.py  schedule.py  types.py  users.py
app/parks/: core.py  search.py
app/pets/: crud.py  schemas.py
app/routers/: images.py  notifications.py  parks.py  pets.py  users.py
app/users/: __init__.py  auth.py  crud.py  responses.py  schemas.py
assistants/: agents.py  assistant.py  threads.py  types.py
audio/: speech_to_text.py
cmd/: main.go
cmd/api/: error.go  main.go
config/: env.go
database/: core.py  init.go  models.py  parks.py
database/migrations/: 00001_initial.sql
database/mixins/: geolocation.py
database/queries/: pets.sql  users.sql
database/repository/: models.go  pets.sql.go  users.sql.go
docs/: openapi.yml
images/: crud.py
internal/middleware/: authenticate.go  logging.go
middleware/: authenticate.go  logging.go
migrations/: 000001_initial.down.sql  000001_initial.up.sql  000002_daily_streak.down.sql  000002_daily_streak.up.sql
notifications/: channels.py  core.py  devices.py  schedule.py  types.py  users.py
parks/: core.py  search.py
patches/: jose@4.15.9.patch
routers/: assistants.py  audio.py  images.py  notifications.py  parks.py
scripts/: db_migrations.sh
services/: handler.go
services/pets/: handler.go  models.go  store.go
services/users/: handler.go  models.go  store.go
src/: api.ts  app.ts  config.rs  env.ts  error.rs  index.ts  main.rs
src/db/: index.ts  migrate.ts
src/db/schema/: enums.ts  index.ts  pet.ts  petAttr.ts  place.ts  placeMetadata.ts  types.ts  user.ts  userSubscription.ts
src/db/utils/: schema-spread.ts
src/errors/: users.ts
src/lib/: create-app.ts  error.ts  openapi-spec.ts  status-codes.ts  types.ts  utils.ts
src/lib/errors/: auth.ts  core.ts  main.ts  users.ts
src/middleware/: auth.rs  mod.rs  pino-logger.ts
src/middleware/auth/: core.rs  error.rs  layer.rs  mod.rs
src/middleware/log/: core.rs  layer.rs  mod.rs
src/middlewares/auth/: auth.test.ts  handlers.ts  plugin.ts
src/middlewares/users/: handlers.ts  plugin.ts
src/routes/: index.ts
src/routes/users/: users.errors.ts  users.handlers.ts  users.index.ts  users.models.ts  users.plugin.ts  users.routes.ts
src/routes/users/auth/: auth.error.ts  auth.errors.ts  auth.handler.ts  auth.handlers.ts  auth.models.ts  auth.plugin.ts  auth.test.ts
src/service/: mod.rs
src/service/assets/: mod.rs
src/service/assets/images/: error.rs  handlers.rs  routes.rs
src/service/assistant/: handlers.rs  mod.rs  models.rs  routes.rs
src/service/healthcheck/: handlers.rs  routes.rs
src/service/pets/: handlers.rs  mod.rs  models.rs  routes.rs  store.rs
src/service/users/: error.rs  handlers.rs  mod.rs  models.rs  routes.rs
tests/: test_main.py
tests/images/: test_generate_blob_name.py
utils/: azure.py  firebase.py  types.go
(+5 files in other folders)
