[package]
name = "dogy-backend-api"
version = "0.2.2"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json", "native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
strum_macros = "0.27.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }
